--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@
 # ==========================================
 
 # URL completa de conexión a PostgreSQL
-DATABASE_URL=postgresql://sage:sage_password_2025@localhost:5432/sage
+DATABASE_URL=postgresql://postgres:G121BNaAxp-9Th1@54.39.50.123:5432/sage
 
 # Configuración individual de PostgreSQL
 PGHOST=localhost
