--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next dev -p 5000"
+    "dev": "next dev -p 5000",
+    "build": "next build",
+    "start": "next start"
   },
   "keywords": [],
   "author": "",
