--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@headlessui/react": "^1.7.19",
-    "@heroicons/react": "^2.2.0",
+    "@headlessui/react": "1.7.19",
+    "@heroicons/react": "2.2.0",
     "@hookform/resolvers": "^4.1.3",
     "@stripe/react-stripe-js": "^3.4.0",
     "@stripe/stripe-js": "^6.0.0",
     "@tanstack/react-query": "^5.71.1",
     "@tanstack/react-query-devtools": "^5.71.1",
-    "@tremor/react": "^3.18.7",
+    "@tremor/react": "3.18.7",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
     "@types/prismjs": "^1.26.5",
@@ -34,17 +34,18 @@
     "dotenv": "^16.4.7",
     "formidable": "^3.5.2",
     "framer-motion": "^12.6.2",
-    "next": "^15.2.4",
+    "lucide-react": "^0.462.0",
+    "next": "15.2.4",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.3",
     "postcss": "^8.4.31",
     "prismjs": "^1.30.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.55.0",
-    "react-query": "^3.39.3",
-    "react-toastify": "^11.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "7.55.0",
+    "react-query": "3.39.3",
+    "react-toastify": "11.0.5",
     "stripe": "^17.7.0",
     "styled-components": "^6.1.16",
     "tailwindcss": "^3.3.3",
